force-app/main/default/objects/Plant_Log__c/Plant_Log__c.object-meta.xml
<CustomObject>
    <label>Plant Log</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Plant Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plant Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>