force-app/main/default/objects/Plant_Log__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Watering</fullName>
            </value>
            <value>
                <fullName>Sunlight Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>