force-app/main/default/objects/Plant_Log__c/fields/Sunlight_Hours__c.field-meta.xml
<CustomField>
    <fullName>Sunlight_Hours__c</fullName>
    <label>Sunlight Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>